1.0.0: cosmetics - bugs found in testing - add responsive CSS to iframe code chambers page - center align footer

--- a/src/Styles.css
+++ b/src/Styles.css
@@ -46,6 +46,12 @@ p, a, h1, h3 {
     text-decoration: none;
 }
 
+/** USEFUL */
+.align-center {
+    text-align: center;    
+}
+
+
 @-webkit-keyframes fadeIn {
     0% {opacity: 0;}
     100% {opacity: 1;}
@@ -422,7 +428,7 @@ p, a, h1, h3 {
     margin-top: 0;
     background-color: #ffffff;
     padding: 30px;
-    border-radius: 15px;
+    border-radius: 5px;
 
 }
 
@@ -467,7 +473,6 @@ p, a, h1, h3 {
         text-align: center;
         padding-top: 30px;
         padding-bottom: 30px;
-        /*border-bottom: 1px solid #333;*/
     }
 
     .portfolio-section-text-margin {
@@ -482,6 +487,8 @@ p, a, h1, h3 {
 
     .portfolio-section-image img {
         width: 90%;
+        max-width: 250px;
+        min-height: 175px;
     }    
 }
 
@@ -666,10 +673,20 @@ p, a, h1, h3 {
 
     }
 
+    .code-chambers .code-chambers-video {
+        width: 500px;
+        height: 350px;
+    }
+
     @media all and (max-width: 1000px) {
         .code-chambers {
             width: 100%;
         }
+
+        .code-chambers .code-chambers-video {
+            width: 300px;
+            height: 175px;
+        }    
     }
     
 
